--- a/src/components/Pizza/Pizza.module.css
+++ b/src/components/Pizza/Pizza.module.css
@@ -8,13 +8,14 @@
 
 /*--- Crust & Sauce ---*/
 .crust{
+	position: absolute;
 	width: 700px; 
 	height: 700px; 
 	border-radius: 800px; 
 	background: #ab5f2b; 
 	-webkit-box-shadow: inset 0 0 40px #e5a53b; 
 	border: 1px solid #ab5f2b;
-    }
+}
  
 .crumbs{
 	opacity: 0;
