--- a/src/components/Pizza/PizzaIngredient/PizzaIngredient.module.css
+++ b/src/components/Pizza/PizzaIngredient/PizzaIngredient.module.css
@@ -1,5 +1,5 @@
-   
 .crust{
+	position: absolute;
 	width: 700px; 
 	height: 700px; 
 	border-radius: 800px; 
@@ -36,7 +36,7 @@
 		-o-transform: rotate(12deg) translate(-4px, -600px);
 		transform: rotate(12deg) translate(-4px, -600px);
 	}
-	.pep{
+	.pepperoni{
 		position: absolute; 
 		width: 80px; 
 		height: 70px; 
@@ -57,41 +57,40 @@
 		-o-transform: scale(1.3);
 		transform: scale(1.3);
 	} */
-		.pep.one{margin: 60px 0 0 305px;}
-		.pep.two{margin: 75px 0 0 390px;}
-		.pep.three{margin: 115px 0 0 470px;}
-		.pep.four{margin: 190px 0 0 525px;}
-		.pep.five{margin: 275px 0 0 555px;}
-		.pep.six{margin: 365px 0 0 550px;}
-		.pep.seven{margin: 450px 0 0 515px;}
-		.pep.eight{margin: 515px 0 0 450px;}
-		.pep.nine{margin: 555px 0 0 365px;}
-		.pep.ten{margin: 560px 0 0 270px;}
+		.pepperoni.n1{margin: 60px 0 0 305px;}
+		.pepperoni.n2{margin: 75px 0 0 390px;}
+		.pepperoni.n3{margin: 115px 0 0 470px;}
+		.pepperoni.n4{margin: 190px 0 0 525px;}
+		.pepperoni.n5{margin: 275px 0 0 555px;}
+		.pepperoni.n6{margin: 365px 0 0 550px;}
+		.pepperoni.n7{margin: 450px 0 0 515px;}
+		.pepperoni.n8{margin: 515px 0 0 450px;}
+		.pepperoni.n9{margin: 555px 0 0 365px;}
+		.pepperoni.n10{margin: 560px 0 0 270px;}
 
-		.pep.eleven{margin: 560px 0 0 270px;}
-		.pep.twelve{margin: 524px 0 0 182px;}
-		.pep.thirteen{margin: 265px 0 0 355px;}
-		.pep.fourteen{margin: 233px 0 0 445px;}
-		.pep.fifteen{margin: 467px 0 0 340px;}
-		.pep.sixteen{margin: 194px 0 0 197px;}
-		.pep.seventeen{margin: 329px 0 0 458px;}
-		.pep.eightteen{margin: 461px 0 0 115px;}
-		.pep.nineteen{margin: 380px 0 0 69px;}
-		.pep.twenty{margin: 287px 0 0 60px;}
+		.pepperoni.n11{margin: 560px 0 0 270px;}
+		.pepperoni.n12{margin: 524px 0 0 182px;}
+		.pepperoni.n13{margin: 265px 0 0 355px;}
+		.pepperoni.n14{margin: 233px 0 0 445px;}
+		.pepperoni.n15{margin: 467px 0 0 340px;}
+		.pepperoni.n16{margin: 194px 0 0 197px;}
+		.pepperoni.n17{margin: 329px 0 0 458px;}
+		.pepperoni.n18{margin: 461px 0 0 115px;}
+		.pepperoni.n19{margin: 380px 0 0 69px;}
+		.pepperoni.n20{margin: 287px 0 0 60px;}
 
-		.pep.twenty-one{margin: 197px 0 0 86px;}
-		.pep.twenty-two{margin: 125px 0 0 141px;}
-		.pep.twenty-three{margin: 84px 0 0 218px;}
-		.pep.twenty-four{margin: 150px 0 0 278px;}
-		.pep.twenty-five{margin: 167px 0 0 374px;}
-		.pep.twenty-six{margin: 457px 0 0 247px;}
-		.pep.twenty-seven{margin: 426px 0 0 426px;}
-		.pep.twenty-eight{margin: 390px 0 0 177px;}
-		.pep.twenty-nine{margin: 290px 0 0 153px;}
-		.pep.thirty{margin: 362px 0 0 267px;}
-
-		.pep.thirty-one{margin: 270px 0 0 257px;}
-		.pep.thirty-three{margin: 358px 0 0 365px;}
+		.pepperoni.n21{margin: 197px 0 0 86px;}
+		.pepperoni.n22{margin: 125px 0 0 141px;}
+		.pepperoni.n23{margin: 84px 0 0 218px;}
+		.pepperoni.n24{margin: 150px 0 0 278px;}
+		.pepperoni.n25{margin: 167px 0 0 374px;}
+		.pepperoni.n26{margin: 457px 0 0 247px;}
+		.pepperoni.n27{margin: 426px 0 0 426px;}
+		.pepperoni.n28{margin: 390px 0 0 177px;}
+		.pepperoni.n29{margin: 290px 0 0 153px;}
+		.pepperoni.n30{margin: 362px 0 0 267px;}
+		.pepperoni.n31{margin: 270px 0 0 257px;}
+		.pepperoni.n32{margin: 358px 0 0 365px;}
 
 /*--- Mushrooms ---*/
 	.mushroom{position: absolute; width: 70px; height: 75px; z-index: 20; margin: 200px 0 0 200px; text-indent: -9999px;}
@@ -325,7 +324,7 @@
 
 		
 /*--- Green Peppers ---*/
-	.green-pepper{
+	.greenPepper{
 		position: absolute; 
 		width: 20px; 
 		height: 45px; 
@@ -335,147 +334,147 @@
 		z-index: 30; 
 	}
 
-		.green-pepper.one{
+		.greenPepper.n1{
 		margin: 200px 0 0 100px;
 		-webkit-transform: rotate(22deg);
 			 -moz-transform: rotate(22deg);
 				 -o-transform: rotate(22deg);
 						transform: rotate(22deg);
-			}
-		.green-pepper.two{
+		}
+		.greenPepper.n2{
 		margin: 450px 0 0 500px;
 		-webkit-transform: rotate(-47deg);
 			 -moz-transform: rotate(-47deg);
 				 -o-transform: rotate(-47deg);
 						transform: rotate(-47deg);
 		}
-		.green-pepper.three{
+		.greenPepper.n3{
 		margin: 195px 0 0 200px;
 		-webkit-transform: rotate(115deg);
 			 -moz-transform: rotate(115deg);
 				 -o-transform: rotate(115deg);
 						transform: rotate(115deg);		
 		}
-		.green-pepper.four{
+		.greenPepper.n4{
 		margin: 90px 0 0 300px;
 		-webkit-transform: rotate(67deg);
 			 -moz-transform: rotate(67deg);
 				 -o-transform: rotate(67deg);
 						transform: rotate(67deg);
 		}
-		.green-pepper.five{
+		.greenPepper.n5{
 		margin: 500px 0 0 300px;
 		-webkit-transform: rotate(-86deg);
 			 -moz-transform: rotate(-86deg);
 				 -o-transform: rotate(-86deg);
 						transform: rotate(-86deg);		
 		}
-		.green-pepper.six{
+		.greenPepper.n6{
 		margin: 300px 0 0 200px;
 		-webkit-transform: rotate(0deg);
 			 -moz-transform: rotate(0deg);
 				 -o-transform: rotate(0deg);
 						transform: rotate(0deg);		
 		}
-		.green-pepper.seven{
+		.greenPepper.n7{
 		margin: 340px 0 0 295px;
 		-webkit-transform: rotate(-47deg);
 			 -moz-transform: rotate(-47deg);
 				 -o-transform: rotate(-47deg);
 						transform: rotate(-47deg);		
 		}
-		.green-pepper.eight{
+		.greenPepper.n8{
 		margin: 500px 0 0 150px;
 		-webkit-transform: rotate(115deg);
 			 -moz-transform: rotate(115deg);
 				 -o-transform: rotate(115deg);
 						transform: rotate(115deg);		
 		}
-		.green-pepper.nine{
+		.greenPepper.n9{
 		margin: 300px 0 0 100px;
 		-webkit-transform: rotate(67deg);
 			 -moz-transform: rotate(67deg);
 				 -o-transform: rotate(67deg);
 						transform: rotate(67deg);		
 		}
-		.green-pepper.ten{
+		.greenPepper.n10{
 		margin: 400px 0 0 200px;
 		-webkit-transform: rotate(289deg);
 			 -moz-transform: rotate(289deg);
 				 -o-transform: rotate(289deg);
 						transform: rotate(289deg);		
 		}
-		.green-pepper.eleven{		
+		.greenPepper.n11{		
 		margin: 300px 0 0 200px;
 		-webkit-transform: rotate(0deg);
 			 -moz-transform: rotate(0deg);
 				 -o-transform: rotate(0deg);
 						transform: rotate(0deg);		
 		}
-		.green-pepper.twelve{		
+		.greenPepper.n12{		
 		margin: 300px 0 0 200px;
 		-webkit-transform: rotate(0deg);
 			 -moz-transform: rotate(0deg);
 				 -o-transform: rotate(0deg);
 						transform: rotate(0deg);		
 		}
-		.green-pepper.thirteen{		
+		.greenPepper.n13{		
 		margin: 300px 0 0 200px;
 		-webkit-transform: rotate(0deg);
 			 -moz-transform: rotate(0deg);
 				 -o-transform: rotate(0deg);
 						transform: rotate(0deg);		
 		}
-		.green-pepper.fourteen{		
+		.greenPepper.n14{		
 		margin: 210px 0 0 300px;
 		-webkit-transform: rotate(10deg);
 			 -moz-transform: rotate(10deg);
 				 -o-transform: rotate(10deg);
 						transform: rotate(10deg);		
 		}
-		.green-pepper.fifteen{		
+		.greenPepper.n15{		
 		margin: 420px 0 0 290px;
 		-webkit-transform: rotate(0deg);
 			 -moz-transform: rotate(0deg);
 				 -o-transform: rotate(0deg);
 						transform: rotate(0deg);		
 		}
-		.green-pepper.sixteen{		
+		.greenPepper.n16{		
 		margin: 150px 0 0 410px;
 		-webkit-transform: rotate(50deg);
 			 -moz-transform: rotate(50deg);
 				 -o-transform: rotate(50deg);
 						transform: rotate(50deg);		
 		}
-		.green-pepper.seventeen{
+		.greenPepper.n17{
 		margin: 260px 0 0 510px;
 		-webkit-transform: rotate(80deg);
 			 -moz-transform: rotate(80deg);
 				 -o-transform: rotate(80deg);
 						transform: rotate(80deg);		
 		}
-		.green-pepper.eightteen{		
+		.greenPepper.n18{		
 		margin: 400px 0 0 410px;
 		-webkit-transform: rotate(0deg);
 			 -moz-transform: rotate(0deg);
 				 -o-transform: rotate(0deg);
 						transform: rotate(0deg);		
 		}
-		.green-pepper.nineteen{		
+		.greenPepper.n19{		
 		margin: 280px 0 0 390px;
 		-webkit-transform: rotate(150deg);
 			 -moz-transform: rotate(150deg);
 				 -o-transform: rotate(150deg);
 						transform: rotate(150deg);		
 		}
-		.green-pepper.twenty{		
+		.greenPepper.n20{		
 		margin: 530px 0 0 420px;
 		-webkit-transform: rotate(-100deg);
 			 -moz-transform: rotate(-100deg);
 				 -o-transform: rotate(-100deg);
 						transform: rotate(-100deg);		
 		}
-		.green-pepper.twenty-one{		
+		.greenPepper.n21{		
 		margin: 360px 0 0 540px;
 		-webkit-transform: rotate(69deg);
 			 -moz-transform: rotate(69deg);
